# local_code_agent

./: .env.example  .gitignore  README.md  config.py  main.py  package-lock.json  package.json  plan.txt  pyproject.toml  runner.py  tsconfig.json
agents/: __init__.py  planning.py
backup/: config.py
backup/db/: __init__.py
backup/frameworks/: __init__.py
backup/frameworks/springboot/: __init__.py  ingestor.py
backup/knowledge/: __init__.py
db/: weaviate_client.py
frameworks/springboot/: ingestor.py
knowledge/: base.py
src/: test.ts
src/mastra/: config.ts  index.ts
src/mastra/agents/: code-agent.ts
src/mastra/tools/: code-collector.ts  code-search.ts
src/mastra/workflows/: code-ingest.ts
